# stac

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .prettierrc.cjs  CHANGELOG.md  CNAME  README.md  _config.yml  alvalidate.sh  fields.json  package-lock.json  package.json  pyproject.toml  shell.nix  validate.sh  validation.js  validation.mjs
.github/: dependabot.yml  remark.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: feilds.yaml  fields.yaml  publish.yaml  test.yaml
extensions/: validation.js
extensions/aerial-imagery/: README.md
extensions/aerial-photo/: README.md  schema.json
extensions/aerial_photo/: README.md  schema.json
extensions/camera/: README.md  schema.json
extensions/film/: README.md  schema.json
extensions/historical-imagery/: README.md  schema.json
extensions/historical_imagery/: README.md
extensions/linz/: CHANGELOG.md  README.md  schema.json
extensions/linz_dataset/: README.md
extensions/linz_metadata/: README.md
extensions/point-cloud/: README.md
extensions/quality/: CHANGELOG.md  README.md  schema.json
extensions/scanning/: README.md  schema.json
extensions/template/: README.md  schema.json
fields/: custom-fields.json  fields.json  import-fields-json.js
schemas/linz/: CHANGELOG.md  README.md  schema.json
v0.0.10/aerial-photo/: README.md  schema.json
v0.0.10/camera/: README.md  schema.json
v0.0.10/film/: README.md
v0.0.10/historical-imagery/: README.md  schema.json
v0.0.10/linz/: README.md  schema.json
v0.0.8/: validation.js
v0.0.9/: validation.js
(+508 files in other folders)
